2008-03-05  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: handle stderr messages during file transfer.
	* Http.cc: add 303 and 307 codes (suggested by Stephane Chazelas <Stephane_Chazelas@yahoo.fr>).

2008-02-26  Alexander V. Lukyanov <lav@yars.free.net>

	* SSH_Access.cc, SSH_Access.h, Fish.cc, Fish.h, SFtp.cc, SFtp.h, Makefile.am:
	  split off the ssh interaction logic to separate module (SSH_Access).
	* MirrorJob.cc: add basename only if it is not already there.

2008-02-20  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: fix spinning when fail-exit is triggered with non-empty
	  root cmd_buf.

2008-02-17  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h, resource.cc: new setting ftp:ssl-shutdown-timeout;
	  wait for ssl shutdown after CCC (new wait state WAITING_CCC_SHUTDOWN);
	  move some timers and connection state variables to Connection class;
	  use xstring_c for some members.
	* FileAccess.h, NetAccess.h: use xstring_c for some members.

2008-02-16  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h, resource.cc: ftp:proxy-auth-type replaces
	  old ftp:proxy-auth-joined setting; implement two more auth types:
	  joined-acct and open (partly based on patch from David Wolfe <davidw@wolfeden.org>).

2008-02-15  Alexander V. Lukyanov <lav@yars.free.net>

	* network.cc, network.h, Makefile.am: (network.*) new files.
	* xarray.h: (search) new method.
	* Resolver.h, Resolver.cc: use new sockaddr_u methods;
	  don't add the same address multiple times; report found addrs.
	* NetAccess.cc, NetAccess.h: use new sockaddr_u methods.
	* ftpclass.cc: workaround proftpd NLST bug; workaround for
	  a server bug sending single NL; simplify encode_eprt.

2008-02-06  Laurent MONIN <zas@norz.org>

	* commands.cc: add open -s option, describe slot command syntax.

2008-02-06  Alexander V. Lukyanov <lav@yars.free.net>

	* parsecmd.cc: don't delete Ref (fixes double delete bug).
