@@ -1,3 +1,7 @@
+2008-03-13  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* FileSet.cc: use time 12:00:00 when time is unknown (instead of 12:00:30).
+
 2008-03-05  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* Fish.cc: handle stderr messages during file transfer.
